tests/test_exception/bad/exceptions_cycle.catala_en
## Test

```catala
declaration scope A:
  context x content integer

scope A:
  label base_x
  exception exception_exception_x
  definition x equals 0

  label exception_x
  exception base_x
  definition x equals 1

  label exception_exception_x
  exception exception_x
  definition x equals 2
```

```catala-test-inline
$ catala Interpret -s A
[WARNING] In scope "A", the variable "x" is never used anywhere; maybe it's unnecessary?

┌─⯈ tests/test_exception/bad/exceptions_cycle.catala_en:5.11-5.12:
└─┐
5 │   context x content integer
  │           ‾
  └─ Test
[ERROR] Exception cycle detected when defining x: each of these 3 exceptions applies over the previous one, and the first applies over the last

┌─⯈ tests/test_exception/bad/exceptions_cycle.catala_en:8.3-10.15:
└──┐
 8 │   label base_x
   │   ‾‾‾‾‾‾‾‾‾‾‾‾
 9 │   exception exception_exception_x
   │   ‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾
10 │   definition x equals 0
   │   ‾‾‾‾‾‾‾‾‾‾‾‾


┌─⯈ tests/test_exception/bad/exceptions_cycle.catala_en:12.3-14.15:
└──┐
12 │   label exception_x
   │   ‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾
13 │   exception base_x
   │   ‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾
14 │   definition x equals 1
   │   ‾‾‾‾‾‾‾‾‾‾‾‾


┌─⯈ tests/test_exception/bad/exceptions_cycle.catala_en:16.3-18.15:
└──┐
16 │   label exception_exception_x
   │   ‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾
17 │   exception exception_x
   │   ‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾
18 │   definition x equals 2
   │   ‾‾‾‾‾‾‾‾‾‾‾‾

#return code 255#
```
